kubernetes/template/istio.yml

apiVersion: "networking.istio.io/v1alpha3"
kind: "Gateway"
metadata: 
  name: taxi calling service
spec: 
  selector: 
    istio: "ingressgateway"
  servers: 
    - 
      port: 
        number: 80
        name: "http"
        protocol: "HTTP"
      hosts: 
        - "*"


---


apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-customerManagement
spec:
  replicas: 5
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: vsvc-customerManagement        # required
            routes:
            - primary                 # required
          destinationRule:
            name: destrule-customerManagement    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
      - setWeight: 5
      - pause:
          duration: 10s
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s

  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: customerManagement
  template:
    metadata:
      labels:
        app: customerManagement
    spec:
      containers:
      - name: customerManagement
        image: "userid/customerManagement:version"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

---
 

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-customerManagement
spec:
  gateways:
  - taxi calling service
  hosts:
  - "*"
  http:
  - name: primary       # referenced in canary.trafficRouting.istio.virtualService.routes
    match: 
    - uri: 
        exact: "/customerManagements"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: customerManagement
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: customerManagement
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0


---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-customerManagement
spec:
  host: customerManagement
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: customer-management
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: customer-management


---


apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-taxiDriverManagement
spec:
  replicas: 5
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: vsvc-taxiDriverManagement        # required
            routes:
            - primary                 # required
          destinationRule:
            name: destrule-taxiDriverManagement    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
      - setWeight: 5
      - pause:
          duration: 10s
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s

  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: taxiDriverManagement
  template:
    metadata:
      labels:
        app: taxiDriverManagement
    spec:
      containers:
      - name: taxiDriverManagement
        image: "userid/taxiDriverManagement:version"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

---
 

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-taxiDriverManagement
spec:
  gateways:
  - taxi calling service
  hosts:
  - "*"
  http:
  - name: primary       # referenced in canary.trafficRouting.istio.virtualService.routes
    match: 
    - uri: 
        exact: "/taxiDriverManagements"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: taxiDriverManagement
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: taxiDriverManagement
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0


---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-taxiDriverManagement
spec:
  host: taxiDriverManagement
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: taxi-driver-management
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: taxi-driver-management


---


apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-platformOperations
spec:
  replicas: 5
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: vsvc-platformOperations        # required
            routes:
            - primary                 # required
          destinationRule:
            name: destrule-platformOperations    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
      - setWeight: 5
      - pause:
          duration: 10s
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s

  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: platformOperations
  template:
    metadata:
      labels:
        app: platformOperations
    spec:
      containers:
      - name: platformOperations
        image: "userid/platformOperations:version"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

---
 

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-platformOperations
spec:
  gateways:
  - taxi calling service
  hosts:
  - "*"
  http:
  - name: primary       # referenced in canary.trafficRouting.istio.virtualService.routes
    match: 
    - uri: 
        exact: "/platformOperations"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: platformOperations
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: platformOperations
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0


---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-platformOperations
spec:
  host: platformOperations
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: platform-operations
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: platform-operations


---


apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-mapDataProvider
spec:
  replicas: 5
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService: 
            name: vsvc-mapDataProvider        # required
            routes:
            - primary                 # required
          destinationRule:
            name: destrule-mapDataProvider    # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
      - setWeight: 5
      - pause:
          duration: 10s
      - setWeight: 20
      - pause:
          duration: 10s
      - setWeight: 40
      - pause:
          duration: 10s
      - setWeight: 60
      - pause:
          duration: 10s
      - setWeight: 80
      - pause:
          duration: 10s

  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mapDataProvider
  template:
    metadata:
      labels:
        app: mapDataProvider
    spec:
      containers:
      - name: mapDataProvider
        image: "userid/mapDataProvider:version"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

---
 

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-mapDataProvider
spec:
  gateways:
  - taxi calling service
  hosts:
  - "*"
  http:
  - name: primary       # referenced in canary.trafficRouting.istio.virtualService.routes
    match: 
    - uri: 
        exact: "/mapDataProviders"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: mapDataProvider
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: mapDataProvider
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0


---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-mapDataProvider
spec:
  host: mapDataProvider
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: map-data-provider
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    labels:        # labels will be injected with canary rollouts-pod-template-hash value
      app: map-data-provider
